@@ -4,9 +4,10 @@ amaroK ChangeLog
 
 
 VERSION 1.2.1:
+  ADD: New DCOP call "playlist: playByIndex(int)".
   CHG: Upgraded internal SQLite database to 3.1.2.
   FIX: Update the database after editing tags in playlist. (BR 99593)
-  ADD: New DCOP function "trackPlayCounter". (BR 99575)
+  ADD: New DCOP function "player: trackPlayCounter". (BR 99575)
   ADD: .ram playlist support with code from Kaffeine. (BR 96101)
   FIX: amaroK can now determine the correct track-length even for formats
        unknown to TagLib. Makes it possible to seek e.g. in m4a tracks.
